plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'spot'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://jitpack.io' }
}

dependencies {
	// BASIC ⭐
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	implementation 'com.klaytn.caver:core:1.8.0'

	// Logging ⭐
	implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.16'
	implementation 'com.squareup:javapoet:1.13.0'
	annotationProcessor 'com.google.auto.service:auto-service:1.0'
	compileOnly 'javax.annotation:javax.annotation-api:1.3.2' // Java 9 이상에서는 필요

	// TEST ⭐
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	runtimeOnly 'com.h2database:h2'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	testImplementation 'org.projectlombok:lombok:1.18.28'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.28'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// SECURITY ⭐

	// Map Struct ⭐
	implementation group: 'org.mapstruct', name: 'mapstruct', version: '1.5.5.Final'			// MapStruct 사용을 위한 의존성 라이브러리
	implementation group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.5.5.Final'	// MapStruct는 컴파일 타임에 인터페이스의 구현체를 만들어서 build에 올림. 이를 위한 Processor 라이브러리
	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'						// 컴파일 시간에 구현체를 만드는 Lombok과 컴파일 타임에 충돌이 날 수 있음. 따라서 순서 조정 (Lombok 먼저, MapStruct 다음에)
}

// Add VM Option (1)
compileJava {
	options.compilerArgs += [
			'--enable-preview',
			'-Amapstruct.defaultComponentModel=spring' // here
	]
}

tasks.named('test') {
	useJUnitPlatform()
	jvmArgs([
			'--enable-preview',
			'-Amapstruct.defaultComponentModel=spring'
	])
}
